# MessagingService

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 989697ab4cf0_init.py
app/: database.py  main.py  models.py  schemas.py
messagingservice/: database.py  db_config.py  main.py  schemas.py
messagingservice/api_v1/auth/: crud.py  jwt.py  service.py  utils_jwt.py
messagingservice/api_v1/chat/: crud.py
messagingservice/api_v1/profile/: crud.py
messagingservice/api_v1/users/: crud.py  jwt.py
messagingservice/templates/: index.html  login.html  profile.html  register.html
